[workspace]
#members = ["cosmos/contracts/*", "polkadot/contracts/*"]
members = ["polkadot/contracts/finance2", "polkadot/contracts/assetpool"]

# Resolver has to be set explicitely in workspaces, see https://github.com/rust-lang/cargo/issues/9956
resolver = "2"

[profile.release]
rpath = false
lto = true
overflow-checks = false
opt-level = 3
debug = false
debug-assertions = false
panic = 'abort'
