[package]
name = "pfinance"
version = "0.1.0"
edition = "2021"
authors = ["Lukasz <lukasz@ulam.io>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ink = { version = "4.3", default-features = false }
ink_primitives = { version = "4.3", default-features = false }
scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2.10", default-features = false, features = ["derive"] }

[workspace]

[lib]
path="lib.rs"

[features]
default = ["std"]
std = ["ink/std"]
ink-as-dependency = []
e2e-tests = []
