[package]
name = "finance2"
version = "0.1.0"
authors = ["[your_name] <[your_email]>"]
edition = "2021"

[dependencies]
ink = { version = "5.0.0-rc.1", default-features = false }
primitive-types = { version = "0.12.2", default-features = false, features = [
    "codec",
] }
traits = { path = "../traits", default-features = false }

[lib]
path = "lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
    "traits/std",
]
ink-as-dependency = []
