[package]
name = "finance2-fuzz"
version = "0.0.0"
publish = false
edition = "2018"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = { version = "0.4.0", features = ["arbitrary-derive"] }

[dependencies.finance2]
path = ".."

[[bin]]
name = "panic_check"
path = "fuzz_targets/panic_check.rs"
test = false
doc = false
bench = false
