[package]
name = "finance2-fuzz"
version = "0.0.0"
publish = false
edition = "2018"

[package.metadata]
cargo-fuzz = true

[dependencies]
arbitrary = { version = "1", features = ["derive"] }
libfuzzer-sys = { version = "0.4.0", features = ["arbitrary-derive"] }
ink = { version = "5.0.0-rc.1", default-features = false }

[dependencies.finance2]
path = ".."

[[bin]]
name = "panic_check"
path = "fuzz_targets/panic_check.rs"
test = false
doc = false
bench = false
